@@ -1,3 +1,6 @@
+2012-03-18  6.7.6-1 Anthony  <anthony@griffith...>
+  * Add MagickCompositeLayers() to allow you to compose two magick wands
+
 2012-03-15  6.7.6-1 Anthony  <anthony@griffith...>
   * Rename wand iteration flags to more logical names
   * Fix the MagickWand add/read insertion of new images into wands
